add sign up and sign in Forms

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,7 +24,7 @@
   <div class="border-top pt-3">
     <small class="text-muted">
       Don't Have an Account?
-      <a class="ml-2" href="{{url_for('register')}}">register</a>
+      <a class="ml-2" href="{{url_for('registration')}}">register</a>
     </small>
   </div>
 </div>
