--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,8 +53,8 @@
               <a class="btn btn-primary" href="/login">Sign in</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-outline-primary ms-1" href="/register"
-                >Sign up</a
+              <a class="btn btn-outline-primary" href="/registration"
+                >Sign in</a
               >
             </li>
           </ul>
