--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,13 +54,22 @@
             </li>
             <li class="nav-item">
               <a class="btn btn-outline-primary" href="/registration"
-                >Sign in</a
+                >Sign up</a
               >
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <div class="row">
+      {% with messages = get_flashed_messages() %} {% if messages %}
+      <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %} {% endwith %}
+    </div>
     <div class="container">{%block content%} {%endblock%}</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
