add user and pitch model

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
     <img src="..." class="card-img-top" alt="..." />
     <div class="card-body">
       <h5 class="card-title">{{pitch.title}}</h5>
-      <p class="card-text">{{pitch.description}}</p>
+      <p class="card-text">{{pitch.body}}</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
     <div class="card-footer">
