--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%} {%block content%}
 <div class="row">
-  <p class="welcome">Welcome , {{user.username}}</p>
+  <p class="welcome">Welcome , {{current_user.username}}</p>
   {%for pitch in pitches%}
 
   <div class="card m-3 shadow-sm" style="width: 18rem">
@@ -12,7 +12,7 @@
     </div>
     <div class="card-footer">
       <small class="text-muted"
-        >By {{pitch.author }} on {{pitch.date_posted}}</small
+        >By {{pitch.author.username }} on {{pitch.date_posted}}</small
       >
     </div>
   </div>
