--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -6,19 +6,31 @@
       <legend class="border-bottom mb-4">Join Today</legend>
       <div class="form-group">
         {{ form.username.label(class="form-control-label") }} {{
-        form.username(class="form-control form-control-lg") }}
+        form.username(class="form-control form-control-lg") }} {% for error in
+        form.username.errors %}
+        <small style="color: red">[{{ error }}]</small>
+        {% endfor %}
       </div>
       <div class="form-group">
         {{ form.email.label(class="form-control-label") }} {{
-        form.email(class="form-control form-control-lg") }}
+        form.email(class="form-control form-control-lg") }} {% for error in
+        form.email.errors %}
+        <small style="color: red">[{{ error }}]</small>
+        {% endfor %}
       </div>
       <div class="form-group">
         {{ form.password.label(class="form-control-label") }} {{
-        form.password(class="form-control form-control-lg") }}
+        form.password(class="form-control form-control-lg") }} {% for error in
+        form.password.errors %}
+        <small style="color: red">[{{ error }}]</small>
+        {% endfor %}
       </div>
       <div class="form-group">
         {{ form.confirm_password.label(class="form-control-label") }} {{
-        form.confirm_password(class="form-control form-control-lg") }}
+        form.confirm_password(class="form-control form-control-lg") }} {% for
+        error in form.confirm_password.errors %}
+        <small style="color: red">[{{ error }}]</small>
+        {% endfor %}
       </div>
       <div class="form-group">
         {{ form.submit (class = "btn btn-outline-info") }}
@@ -26,7 +38,7 @@
     </fieldset>
   </form>
   <div class="border-top pt-3">
-    <small class="text-muted">
+    <small>
       Already Have an Account?
       <a class="ml-2" href="{{url_for('login')}}">sign in</a>
     </small>
